Fix the alignment of the top bar (#24)
The BORS and the icons should be aligned.

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -19,7 +19,7 @@ header, nav {
   text-align: right;
   display: block;
 }
-#header-user > a, #header-user img {
+#header-user > a, #header-user img, #header-logo {
   vertical-align: middle;
   line-height: 25px;
   height: 25px;
